Revised Ansible inventory file

--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,3 +1,15 @@
-10.110.2.175 ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/xz_lab_target
-10.110.2.242 ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/xz_lab_target
-10.110.2.238 ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/xz_lab_target
+[jumpbox]
+10.110.1.36
+				
+[target]
+10.110.2.115
+10.110.2.106
+10.110.2.71
+				
+[jumpbox:vars]
+ansible_user=ubuntu
+ansible_ssh_private_key_file=~/.ssh/xz_lab_jumpbox
+				
+[target:vars]
+ansible_user=ubuntu
+ansible_ssh_private_key_file=~/.ssh/xz_lab_target
