--- a/ansible/controller/controller_keystore.yml
+++ b/ansible/controller/controller_keystore.yml
@@ -1,7 +1,7 @@
 - name: create directory for each keypair
   file:
-    path: "../admin/jumpbox_keys/{{ user_name }}"
+    path: "{{ root_dir }}/admin/jumpbox_keys/{{ user_name }}"
     state: directory
 - name: populate key filesystem with keypairs
   openssh_keypair:
-    path: "../admin/jumpbox_keys/{{ user_name }}/id_rsa"
+    path: "{{ root_dir }}/admin/jumpbox_keys/{{ user_name }}/id_rsa"
