--- a/ansible/target.yml
+++ b/ansible/target.yml
@@ -8,7 +8,7 @@
       wait_for_connection:
     - name: inject vulnerability
       ansible.builtin.copy:
-        src: "{{ working_directory }}/assets/liblzma.so.5.6.1.patch"
+        src: "/assets/liblzma.so.5.6.1.patch"
         dest: /lib/x86_64-linux-gnu/liblzma.so.5.2.5
       become: true
 
