Continued work on Ansible implementation
Still working on trying to get Ansible provider to behave but ansible_host resources don't appear to be cooperating with ansible_playbooks. The 'name' entry is resolving to the string passed, not the ansible_host resource. Need to look into the source some more to understand why.

--- a/ansible/controller/controller_keystore.yml
+++ b/ansible/controller/controller_keystore.yml
@@ -1,7 +1,7 @@
 - name: create directory for each keypair
   file:
-    path: "{{ root_dir }}/admin/jumpbox_keys/{{ user_name }}"
+    path: "{{ admin_path }}/jumpbox_keys/{{ user_name }}"
     state: directory
 - name: populate key filesystem with keypairs
   openssh_keypair:
-    path: "{{ root_dir }}/admin/jumpbox_keys/{{ user_name }}/id_rsa"
+    path: "{{ admin_path }}/jumpbox_keys/{{ user_name }}/id_rsa"
