--- a/ansible/controller/controller.yml
+++ b/ansible/controller/controller.yml
@@ -7,12 +7,14 @@
   tasks:
     - name: create admin directory if not already present
       file:
-        path: "{{ root_dir }}/admin/"
+        path: "{{ admin_path }}"
         state: directory
     - name: create private key directory
       file:
-        path: "{{ root_dir }}/admin/jumpbox_keys"
+        path: "{{ admin_path }}/jumpbox_keys"
         state: directory
+    - name: pull down vulnerability
+      include_tasks: controller_vuln_install.yml
     - name: build keystore    
       include_tasks: controller_keystore.yml
       loop: "{{ range(0, num_users|int, 1)|list }}"
