Mostly functioning docker deployment

--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,13 +1,12 @@
 [jumpbox]
-18.188.76.11
+3.14.244.237
 				
 [target]
-10.110.2.232
-10.110.2.14
+10.110.2.144
 				
 [jumpbox:vars]
 ansible_user=ubuntu
-		
+	
 [target:vars]
 ansible_user=ubuntu
-ansible_ssh_common_args="-o StrictHostKeyChecking=no ProxyJump=ubuntu@18.188.76.11 -F /home/couriersix/Git/xz_lab/terraform/../admin/ssh_config"
+ansible_ssh_common_args="-o ProxyJump=ubuntu@3.14.244.237"
