--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
 host_key_checking = False
 
-#[ssh_connection]
-#ssh_args = -F {{ root_dir }}/admin/ssh_config
+[ssh_connection]
+ssh_args = -F ../admin/ssh_config
