--- a/ansible/jumpbox/jumpbox_users.yml
+++ b/ansible/jumpbox/jumpbox_users.yml
@@ -1,7 +1,9 @@
 - name: create users on jumpbox
-  ansible.builtin.user:
+  user:
     name: "{{ user_name }}"
     shell: /bin/bash
+    groups: docker
+    append: yes
 - name: add pub key to user authorized_keys
   authorized_key:
     user: "{{ user_name }}"
